<resources>
    <string name="app_name">WeatherApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_weather_details">WeatherDetailsActivity</string>
    <string name="label_weather">Weather</string>
    <string name="label_wind_speed">Wind Speed</string>
    <string name="label_cloudiness">Cloudiness</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="title_details">Weather details</string>
</resources>
